[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin = { version = "0.29.2", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
