[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin = { version = "0.29.2", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
thiserror = "1.0.38"
anyhow = "1.0.69"
base64 = "0.21.0"
hex = "0.4.3"
log = "0.4.17"
miette = "5.5.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rand = "0.7"
sha2 = "0.10.6"
bs58 = { version = "0.4.0", features = ["check"] }
sha256 = "1.1.2"

[dev-dependencies]
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] }
